[package]
name = "devbook-bot"
version = "0.1.0"
authors = ["mTvare6 <austin76912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]


[dependencies.serenity]
default-features = false
features = ["cache", "framework", "standard_framework", "rustls_backend", "gateway"]
version = "0.10"

