[package]
name = "devbook-bot"
version = "0.1.0"
authors = ["mTvare6 <mTvare6@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
string-builder = "0.2.0"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.0"


[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.10.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
